src/components/stories/viewer/main/stories-viewer.css
.stories__viewer {
    position: fixed;
    background: #f2f2f2;
    right: 0;
    left: 0;
    bottom: 0;
    top: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

.stories__viewerBg {
    position: fixed;
    top: -60px;
    left: -60px;
    width: calc(100% + 120px);
    height: calc(100% + 120px);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    filter: blur(30px);
}

.stories__close {
    position: absolute;
    right: 30px;
    top: 30px;
    cursor: pointer;
}

.stories__wrapper {
    display: flex;
    align-items: center;
    z-index: 2;
}

.stories__arrow {
    width: 25px;
    height: 25px;
    margin: 0 30px;
    cursor: pointer;
    opacity: 1;
}

.stories__arrow--left {
    background: url(i/arrow.svg) no-repeat 50% 50%;
}

.stories__arrow--right {
    background: url(i/arrow.svg) no-repeat 50% 50%;
    transform: rotate(180deg);
}

.stories__arrow--disabled {
    opacity: 0.5;
}

.stories__arrow--disabled:hover {
    cursor: not-allowed;
}

.stories__container {
    position: relative;
    width: 430px;
    height: calc(100vh - 100px);
    max-height: 766px;
    margin: 0 auto;
    transform-style: preserve-3d;
    /*transition: transform 300ms;*/
}

.slide-animation.current {
    transform: translateZ(207px);
    z-index: 2;
}

.slide-animation.prev {
    transform: translateX(-50%) rotateY(-90deg);
    z-index: 2;
}

.slide-animation.next {
    transform: translateX(50%) rotateY(90deg);
    z-index: 2;
}

.no-transition {
    transition: none !important;
}

@keyframes rotate {
    from { transform: rotateY(0deg); }
    to { transform: rotateY(360deg); }
}

@media(max-width: 700px) {
    .stories__arrow {
        display: none;
    }

    .stories__container {
        width: 100vw;
        height: 100svh;
        max-height: unset;
    }
}

